--- a/Template/index.html
+++ b/Template/index.html
@@ -51,7 +51,7 @@
 										<div class="col-md-4">
 											<div class="dbox w-100 d-flex align-items-start">
 						        		<div class="text">
-							            <p><span>Telefono:</span> <a href="tel://1234567920">+502 4760-7058</a></p>
+							            <p>Telefono: +502 4760-7058</p>
 							          </div>
 						          </div>
 										</div>
@@ -95,7 +95,7 @@
 								</div>
 							</div>
 							<div class="col-lg-6 d-flex align-items-stretch">
-								<div class="info-wrap w-100 p-5 img" style="background-image: url({% static 'images/img.jpg' %});">
+								<div class="info-wrap w-100 p-5 img" style="background-image: url({% static 'images/img1.jpg' %})">
 			          </div>
 							</div>
 						</div>
