--- a/Template/index.html
+++ b/Template/index.html
@@ -84,6 +84,12 @@
 													<div class="submitting"></div>
 												</div>
 											</div>
+											<div class="col-md-12">
+												<div class="form-group">
+													<input type="" value="Tabla de Datos" class="btn btn-primary">
+													<div class="submitting"></div>
+												</div>
+											</div>
 										</div>
 									</form>
 									<div class="w-100 social-media mt-5">
